made the search bar stick to the top, fixed some spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,19 +63,28 @@ body.dark-mode .modal-content {
 #menu {
     background-color: rgba(248, 249, 250, 0.8);
     margin: 0px !important;
+    padding: 0px !important;
 }
 
 #filterBox {
     min-width: 265px !important;
 }
 
+#filterAndSearch {
+  position: sticky;
+  top: 0;
+  /* margin-top: 30px; */
+  z-index: 1000;
+  background: #f8f9fa;
+}
+
+
 .search-row {
     padding: 12px;
 }
 
 #searchInput {
-        /* max-width: 350px; */
-        width: 350px;
+        max-width: 300px;
     }
 
     .btn-tot {
